fixed line spacing

--- a/betdurt.css
+++ b/betdurt.css
@@ -29,3 +29,6 @@ img {
     height: 500px;
     width:1340px;
 }
+p {
+    line-height:1
+}
